Bugfix: Don't disable undo/redo actions

The intermediate actions (like that of transform tools) don't create an
undo action on primary undo stack which leaves undo action as disabled
until the `KisActionManager::updateGUI` is triggered which re-enables
the actions.

BUG:443188